@@ -30,6 +30,7 @@ public class UshahidiPref {
     public static String total_reports = "";
     public static String username = "";
     public static String password = "";
+    public static int isCheckinEnabled = 0;
     
     public static void saveSettings(Context context) {
         
@@ -73,6 +74,7 @@ public class UshahidiPref {
         smsUpdate = settings.getBoolean("SmsUpdate",false);
         username = settings.getString("Username", "");
         password = settings.getString("Password","");
+        isCheckinEnabled = settings.getInt("CheckinEnabled", isCheckinEnabled);
         
         // make sure folder exists
         final File dir = new File(UshahidiPref.savePath);
