@@ -21,9 +21,9 @@ public class LocationServices {
 
     public static CheckinActivity checkin_activity;
     
-    private static long lastKnownLocationTimeMillis = 0;
-    private static boolean isGpsFix = false;
-
+    private static boolean gps_provider = false;
+    private static boolean network_provider = false;
+    
     public static void dismissActionDialog() {
         checkin_activity.dismissCheckinProgressDialog();
     }
@@ -31,14 +31,12 @@ public class LocationServices {
     public static void getLocation(CheckinActivity activity) {
         checkin_activity = activity;
         LocationServices.locationSet = false;
-        LocationManager locationManager = (LocationManager)activity
+        final LocationManager locationManager = (LocationManager)activity
                 .getSystemService(Context.LOCATION_SERVICE);
         
         List<String> providers = locationManager.getProviders(true);
-        boolean gps_provider = false, network_provider = false;
         
-       
-        
+     
         for (String name : providers) {
             if (name.equals(LocationManager.GPS_PROVIDER))
                 gps_provider = true;
@@ -49,25 +47,47 @@ public class LocationServices {
         LocationListener locationListener = new LocationListener() {
             public void onLocationChanged(Location location) {
                 // TODO Auto-generated method stub
-                lastKnownLocationTimeMillis = SystemClock.elapsedRealtime();
                 LocationServices.location = location;
-                LocationServices.locationSet = true;
-                dismissActionDialog();
+                boolean isGpsFix = (SystemClock.elapsedRealtime() - 
+                        location.getTime()) < 5000;
+                //check if a fix was made
+                if (isGpsFix) {
+                    // make sure we are not sending a null object 
+                    if (LocationServices.location != null) {
+                        LocationServices.locationSet = true;
+                    } else {
+                        LocationServices.locationSet = false;
+                    }
+                
+                    dismissActionDialog();
+                } else {
+                    LocationServices.locationSet = false;
+                    dismissActionDialog();
+                }
             }
 
             public void onProviderDisabled(String provider) {
-                // TODO Auto-generated method stub
+                LocationServices.location = locationManager.getLastKnownLocation(
+                        LocationManager.NETWORK_PROVIDER);
+                if (LocationServices.location != null) {
+                    LocationServices.locationSet = true;
+                } else {
+                    LocationServices.locationSet = false;
+                }
+                dismissActionDialog();
+                
             }
 
             public void onProviderEnabled(String provider) {
-                // TODO Auto-generated method stub
+              
+                
             }
 
             public void onStatusChanged(String provider, int status, Bundle extras) {
                 // TODO Auto-generated method stub
             }
         };
-
+        
         if (gps_provider || (!gps_provider && !network_provider)) {
             
             locationManager.requestLocationUpdates(LocationManager.GPS_PROVIDER, 1000L, 500.0f,
@@ -77,50 +97,6 @@ public class LocationServices {
             locationManager.requestLocationUpdates(LocationManager.NETWORK_PROVIDER, 1000L, 500.0f,
                     locationListener);
         }
-        
-        /** 
-         * This Class reports on the GPS engine status. It assumes after 3seconds of no reporting of 
-         * a fix. It stops getting the fix
-         */ 
-        GpsStatus.Listener gpsListener = new GpsStatus.Listener() {
-
-            public void onGpsStatusChanged(int event) {
-                switch (event) {
-                    case GpsStatus.GPS_EVENT_SATELLITE_STATUS:
-                        if (LocationServices.location != null)
-                            isGpsFix = (SystemClock.elapsedRealtime() - lastKnownLocationTimeMillis) < 3000;
-
-                        if (isGpsFix) { // A fix has been acquired.
-          
-                            LocationServices.locationSet = true;
-                            dismissActionDialog();
-                        } else { // The fix has been lost.
-                            LocationServices.locationSet = false;
-                            dismissActionDialog();
-                            
-                        }
-                        break;
-                    
-                    case GpsStatus.GPS_EVENT_FIRST_FIX:
-                        
-                        isGpsFix = true;    
-                        // A fix has been acquired.
-                        LocationServices.locationSet = true;
-                        dismissActionDialog();
-                        
-                        break;
-                    default:
-                            
-                        LocationServices.locationSet = false;
-                        dismissActionDialog();
-                        
-                }
-                
-            }
-                   
-        };
-        
-        locationManager.addGpsStatusListener(gpsListener);
         
     }
     
